--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShopifyGenie OMS - Order Management System</title>
+    <meta name="description" content="ShopifyGenie OMS - Smarter Orders. Seamless Fulfillment. Advanced Shopify order management system for tracking, fulfillment, and analytics." />
+    <meta name="theme-color" content="#1F8EF1" />
+    <title>ShopifyGenie OMS | Smarter Orders. Seamless Fulfillment.</title>
   </head>
   <body>
     <div id="app"></div>
